--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "p5": "^0.7.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-p5-wrapper": "0.0.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
