--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "p5": "^0.7.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-geolocated": "^2.4.1",
     "react-p5-wrapper": "0.0.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
