--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jitterate-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/lukej212/jitterate-app",
+  "homepage": "https://lukej212.github.io/jitterate-app",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.0.1",
