--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gh-pages": "^2.0.1",
     "p5": "^0.7.3",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.4",
     "react-geolocated": "^2.4.1",
     "react-p5-wrapper": "0.0.4",
