--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "homepage": "https://lukej212.github.io/jitterate-app",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "express": "4.16.4",
+    "express-favicon": "2.0.1",
     "gh-pages": "^2.0.1",
     "p5": "^0.7.3",
+    "path": "0.12.7",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.4",
@@ -16,7 +19,7 @@
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
