--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "jitterate-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lukej212.github.io/jitterate-app",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "express": "4.16.4",
@@ -16,15 +15,16 @@
     "react-geolocated": "^2.4.1",
     "react-p5-wrapper": "0.0.4",
     "react-router-dom": "^5.0.0",
+    "react-router-redux": "4.0.8",
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "aws s3 sync build/ s3://jitterate-app"
   },
   "eslintConfig": {
     "extends": "react-app"
